fixed navbar layout issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,24 +6,24 @@ body {
 
 .main-container {
     display: flex;
-    width: 100%;
-    margin: 0 0 0 0;
 }
 
 .main-container main {
-    width: 75%;
-    margin: 0 65px;
+    width: 70%;
+    margin-left: 28%;
 }
 
 .main-container nav {
     width: 25%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: #003566;
     color: white;
 }
 
 nav ul {
-    position: sticky;
-    top: 0;
     display: flex;
     flex-direction: column-reverse;
     padding: 0;
